fixed the mustache bindings being visible

--- a/style.css
+++ b/style.css
@@ -33,3 +33,7 @@ body {
 a, li {
     font-family: 'Roboto', sans-serif;
 }
+
+[v-cloak] {
+    display: none;
+}
